--- a/packages/locales/cached/en.wet.json
+++ b/packages/locales/cached/en.wet.json
@@ -1,4 +1,4 @@
 {
   "mainMenuItem.individuals.title": "For Individuals!!!",
-  "page.home.title": "Bitcoin Il is an innovative payment network and a new kind of money."
+  "page.home.title": "🚀 Bitcoin Il is an innovative payment network and a new kind of money."
 }
