--- a/packages/locales/cached/he.wet.json
+++ b/packages/locales/cached/he.wet.json
@@ -1,4 +1,4 @@
 {
   "mainMenuItem.individuals.title": "לאינדיבידואלים",
-  "page.home.title": "ביטקוין ישראלי - מטבע הביטקוין של ישראל - אותו הקונצנזוס, אותו הקוד, הביטקוין שלנו"
+  "page.home.title": "🚀 ביטקוין ישראלי - מטבע הביטקוין של ישראל - אותו הקונצנזוס, אותו הקוד, הביטקוין שלנו"
 }
